# sample_tmdb_dataset

./: README.md  pyproject.toml
data/: 100.json  1000492.json  1000837.json  10020.json  1002185.json  100402.json  10098.json  101.json  1010581.json  1018.json  10191.json  10193.json  10227.json  10229.json  10238.json  10242.json  1026227.json  1027014.json  103.json  10315.json  10331.json  103663.json  10376.json  10386.json  1040.json  10404.json  10451.json  10494.json  105.json  1050035.json  10515.json  1054867.json  1058694.json  1059.json  10633.json  10637.json  1064486.json  106646.json  10674.json  10681.json  (+955 more)
src/: app.py
