[tool.poetry]
name = "sample-tmdb-dataset"
version = "0.1.0"
description = "Sample TMDB dataset project"
authors = ["Your Name <your.email@example.com>"]

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
black = "^25.9.0"
tmdbsimple = "^2.9.1"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 160
target-version = ["py311"]
skip-string-normalization = false